# gsdv

./: AGENTS.md  Cargo.toml  Makefile  README.md  build.rs  reset.md  test-switch.sh  test.sh
.github/workflows/: nightly-release.yml
assets/skills/gsdv-wf/: SKILL.md
docs/: PRD-egui-app.md  design-handoff-layout-and-interaction.md  egui-design-delta.md  egui-manual-qa.md  egui-pr-readiness.md  egui-ui-audit.md  gsdv-ui-spec.md  gui-event-architecture.md
gsdv-spec/ps/main/: root.md  task-main.md
src/: home.rs  home_test.rs  scrolling.rs  scrolling_test.rs
src/ai/: codex.rs  codex_auth.rs  error.rs  mod.rs  types.rs
src/gui/: AGENTS.md  agent.rs  agent_status_hook.rs  agent_status_hook_test.rs  agent_test.rs  app.rs  app_agent.rs  app_chrome.rs  app_commands.rs  app_dialogs.rs  app_document.rs  app_events.rs  app_extra_tools.rs  app_fonts.rs  app_fs.rs  app_helpers.rs  app_input.rs  app_markdown.rs  app_notifications.rs  app_pomodoro.rs  app_remote_server.rs  app_reviewer_state.rs  app_reviewer_ui.rs  app_screenshot.rs  app_shell_ui.rs  app_store.rs  app_tasks.rs  app_terminal_ui.rs  app_test.rs  app_workflow.rs  app_workspace.rs  data.rs  data_test.rs  diff_viewer.rs  glow_gravity_lens.rs  hook.rs  i18n.rs  markdown_preview.rs  markdown_preview_test.rs  mod.rs  (+10 more)
src/reviewer/: app.rs  app_test.rs  diff.rs  diff_test.rs  git.rs  git_backend.rs  git_backend_test.rs  git_test.rs  mod.rs  provenance.rs  provenance_test.rs
web/: index.html  jsconfig.json  package.json  pnpm-lock.yaml  vite.config.js
web/src/: App.vue  styles.css
(+5 files in other folders)
