[package]
name = "gsdv"
version = "0.1.0"
edition = "2024"
autobins = false

[[bin]]
name = "gsdv"
path = "src/bin/gsdv-gui.rs"

[dependencies]
anyhow = "1.0.100"
arboard = "3.6"
async-stream = "0.3"
eframe = "0.31"
egui_glow = "0.31"
egui_extras = "0.31"
glow = "0.16"
alacritty_terminal = "0.25.1"
axum = { version = "0.8.9", features = ["ws"] }
base64 = "0.22"
futures = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }
log = "0.4"
notify = "8.2.0"
rand = "0.9"
pulldown-cmark = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "socks", "stream", "rustls-tls"] }
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.48", features = ["fs", "io-util", "net", "process", "rt-multi-thread", "sync", "time"] }
tokio-socks = "0.5.2"
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
gix = { version = "0.82.0", default-features = false, features = [
    "max-performance-safe",
    "revision",
    "sha1",
    "status",
    "worktree-mutation",
] }
rfd = "0.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
similar = "2.7"
webbrowser = "1.1"
